Text overflow issue css change

--- a/admin/www/css/app.css
+++ b/admin/www/css/app.css
@@ -21,7 +21,7 @@ body,html{font-family:'titilium-regular'; background-color:#f5f5f5;}
 h1,h2,h3,h4,h5,h6{font-family:'titilium-semibold'}
 h2{ font-size:26px !important;color:#023904;}
 
-.textOverflow{
+input{
   text-overflow: ellipsis;
 }
 
